# nix-bootstrap

./: .gitignore  Cargo.toml  README.md  shell.nix
nix/: flake.nix
nix/shell/: create-qemu-disk.sh  run-qemu.sh  ssh-vm.sh
src/: config.rs  copy_config.rs  help.rs  helpers.rs  main.rs  nixos_anywhere.rs  params.rs  sops_age_key.rs  ssh.rs
src.old/: nixos_anywhere.rs  sops_age_key.rs  ssh.rs
src/helpers/: command.rs  disk.rs  git.rs  input.rs  key.rs  mod.rs  temp.rs
src/local/: deploy.rs  git.rs  mod.rs  ssh.rs  update.rs
src/logic/: deploy.rs  disk.rs  git.rs  hardware.rs  key.rs  mod.rs  nix.rs  nix_starter.rs
src/remote/: config.rs  mod.rs  ssh.rs
