[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
ctrlc = "3.4.6"
nix = "0.29.0"
rand = "0.9.1"
ssh-key = "0.6.7"
ssh2 = "0.9.5"
tempfile = "3.19.1"
tokio = { version = "1", features = ["full"] }
whoami = "1.6.0"
