[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
age = { version = "0.11.1", features = ["ssh"] }
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
ctrlc = "3.4.6"
dialoguer = "0.11.0"
dirs2 = "3.0.1"
git2 = "0.20.2"
nix = "0.29.0"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ssh-key = { version = "0.6.7", features = ["ed25519"] }
ssh-to-age = "0.1.0"
ssh2 = "0.9.5"
tempfile = "3.19.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
